WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162355
URLParser should fail when parsing invalid relative URLs with no schemes
https://bugs.webkit.org/show_bug.cgi?id=162355
Summary
URLParser should fail when parsing invalid relative URLs with no schemes
Alex Christensen
Reported
2016-09-21 12:36:12 PDT
URLParser should fail when parsing invalid relative URLs with no schemes
Attachments
Patch
(6.39 KB, patch)
2016-09-21 12:39 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-21 12:39:22 PDT
Created
attachment 289472
[details]
Patch
Alex Christensen
Comment 2
2016-09-21 13:21:32 PDT
http://trac.webkit.org/changeset/206231
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug